--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ wtforms-validators==1.0.0
 Flask-Bcrypt==1.0.1
 Flask-Cors==4.0.0
 sqlalchemy-orm==1.2.10
-Jinja==1.2
+Jinja2==3.1.2
 weasyprint==59.0
 uuid6==2023.5.2
 requests==2.31.0
